ok spacing fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 
+@source inline("col-span-{1,2,3,4,5,6} md:col-span-{1,2,3,4,5,6}");
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
